--- a/website/style.css
+++ b/website/style.css
@@ -44,9 +44,32 @@ header{
     border: 3px solid white;
     padding: 10px 30px;
     color: white;
+    background-color: transparent;
 }
 
 .btn:hover{
     background-color: white;
     color: red;
+}
+
+.exitbutton{
+    float: right;
+    font-size: 20px;
+    width: 40px;
+    height: 40px;
+    background-color: transparent;
+    margin:0;
+    border:none;
+    color:white;
+    z-index: 2;
+    position: relative;
+    right: 40.5%;
+    top: 25px;
+}
+.exitbutton:hover{
+    color: black;
+}
+.exitbutton:focus{
+    color: black;
+    outline: none;
 }
