--- a/website/style.css
+++ b/website/style.css
@@ -1,54 +1,215 @@
-
-*{
-    margin: 0;
-    padding: 0;
+html ,body, .flex{
+    height: 100%;
 }
 
-header{
-    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(food.jpg);
-    height: 100vh;
-    background-size: cover;
-    background-position: center;
+body{
+    margin: 0px;
+}
+#frame{
+    display: none;
 }
 
-.name{
+#frame>.modal{
+    border: none;
     position: absolute;
-    width: 1200px;
-    margin-left: 60px;
-    text-align: center;
-    margin-top: 275px;
-    letter-spacing: 6.16px;
+    transition: width 2s height 2s;
+
+    /* The Modal (background) */
+    z-index: 1; /*Sit on top*/ 
+    left: 0;
+    top: 0;
+    width: 100%; /*Full height */
+    height: 100%; /*Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
     
 }
 
-.name a{
-    color: white;
-    /* text-transform: uppercase; */
-    font-size: 70px;
-    font-family: "Palatino", serif;
-    text-decoration: none;  
+.flex{
+    display: flex;
+    flex-direction: row;
 }
 
-.button {
-    margin-top: 30px;
-    margin-left: -10px;
-    color: white;
+.navbar>ul{
+    list-style: none;
+    padding: 0px;
 }
 
-.button1{
-    font-size: 10px;
-    font-family: "Georgia", serif;
+.navbar{
+    background-color: blueviolet;
+    width: 8%;
+    border-radius: 0px 30px 30px 0px;
+    position: relative;
+    left: -80px;
+    transition: 0.3s;
+}
+
+.navbar:hover{
+    left:0;
 }
 
 .btn{
-    border: 3px solid white;
-    padding: 10px 30px;
-    color: white;
-    background-color: transparent;
+    border:none;
+    background-color: blueviolet;
+    margin:15px;
+    font-size: 25px;
+    width:100%;
+    margin-left: 0px;
+    color:white;
 }
 
 .btn:hover{
+    background-color: violet;
+}
+
+#navlist{
+    display: none;
+}
+
+.exitbutton{
+    float: right;
+    font-size: 20px;
+    width: 40px;
+    height: 40px;
+    margin:0;
+    border:solid;
+    border-color: azure;
+    border-radius:20px;
+    color:white;
+    background-color: rgba(218, 8, 36, 0.7);;
+    z-index: 2;
+    position: fixed;
+    right: 40%;
+    top: 70px;
+}
+.exitbutton:hover{
+    color: black;
+    border-color:black;
+}
+.exitbutton:focus{
+    color: black;
+    outline: none;
+}
+
+.body{
+    /* width:100%;
+    display:flex;
+    flex-direction: column; */
+
+}
+
+/* .body>.header{
+    height:10%;
+} */
+
+div #profile {
+    display: flex;
+    justify-content: flex-end;
+    /* margin: 5px; */
+}
+
+div #profile img {
+    width: 50px;
+    height: 50px;
+}
+
+input[type=text] {
+    width: 100%;
+    height: 46px;
+    box-sizing: border-box;
+    border: 2px solid #17a2b8;
+    border-radius: 25px;
+    font-size: 16px;
+    background-color: white;
+    background-image: url('search.png');
+    background-position: 10px 10px; 
+    background-repeat: no-repeat;
+    background-size: 22px;
+    padding: 12px 20px 12px 40px;
+}
+
+.body>.mainbody1{
+    display:flex;
+    flex-direction:row;
+    height:40%;
+}
+.body>.mainbody1>.section1-1{
+    width:50%;
+}
+
+.body>.mainbody1>.section1-2{
+    display:flex;
+    flex-direction: column;
+    width:50%;
+}   
+.body>.mainbody1>.section1-2>.section1-2-contents{
+    display:flex;
+    flex-direction: row;
+    width:100%;
+} 
+.body>.mainbody1>.section1-2>.section1-2-contents>.section1-2-x{
+    width:33.33%
+}
+.body>.mainbody2{
+    display:flex;
+    flex-direction:row;
+    height:40%;
+}
+.body>.mainbody2>.section2-1{
+    width:50%;
+}
+.body>.mainbody2>.section2-2{
+    width:50%;
+}    
+.body>.footer{
+    height:10%;
+}
+
+.login-popup{
+    text-align: center;
+    z-index: 2;
+    position: relative;
+    width: 20%;
+    border-radius: 20px;
+    background: rgba(218, 8, 36);
+    padding: 20px 10px 200px 10px;
+    margin-left:37%;
+    margin-top: 10%;
+}
+.login-button{
+    text-align: center;
+    padding:12px 20px;
+    margin-top: 8px;
+    border-radius: 25px;
+    width:50%;
+    box-sizing: border-box;
+    background-color: black;
+    color: white;
+    border-color: transparent;
+}
+button:hover{
     background-color: white;
     color: red;
 }
+button:focus{
+    outline: none;
+    background-color:rgb(27, 9, 18);
+    color: white;
+}
 
+/* Add Fade In Animation */
+.animate {
+-webkit-animation: fadein 1s;
+animation: fadein 1s;
+}
+
+@-webkit-keyframes fadein {
+from {opacity: 0;} 
+to {opacity: 1;}
+}
+
+@keyframes fadein {
+from {opacity: 0;} 
+to {opacity: 1;}
+}
