--- a/website/style.css
+++ b/website/style.css
@@ -103,18 +103,18 @@ body{
     height:10%;
 } */
 
-div #profile {
+div #profile { /*Header or Searh bar -Prim*/
     display: flex;
     justify-content: flex-end;
     /* margin: 5px; */
 }
 
-div #profile img {
+div #profile img { /*Header or Searh bar -Prim*/
     width: 50px;
     height: 50px;
 }
 
-input[type=text] {
+input[type=text] { /*Header or Searh bar -Prim*/
     width: 100%;
     height: 46px;
     box-sizing: border-box;
