--- a/website/login.css
+++ b/website/login.css
@@ -42,10 +42,19 @@
     background-color: transparent;
     outline: none;
 }
-
+ 
+.login-container{
+    text-align: left;
+    font-size: 1.1vw;
+    padding: 15px;
+    width: 50%;
+    margin: 0;
+    overflow: auto;
+}
 .login-container>input[type=text], .login-container>input[type=password]{
     background-image: none;
     text-align: center;
+    font-size: 1.2vw;
     padding:12px 20px;
     margin-top: 8px;
     border-radius: 25px;
@@ -62,12 +71,12 @@
 .login-container>input[type=checkbox]:focus{
     outline:2px solid #bf2828;
     outline-offset: -2px;
-} 
-.login-container{
-    text-align: left;
-    padding: 15px;
-    width: 50%;
-    margin: 0;
+}
+.login-picture{
+    height: 100%; 
+    background-image: url('food.jpg'); 
+    opacity: 0.5; 
+    float: right;
 }
 .login-popup{
     text-align: center;
@@ -116,13 +125,198 @@ button:focus{
     margin-left:25%;
 }
 /*Media Queries for Responsive Design*/
-@media only screen and (min-width: 1024px){
+@media only screen and (min-width: 2001px){
     .exitbutton{
         font-size: 26px;
         right: 26%;
-        top: 75px;
+        top: 14vh;
     }
-    
+    .login-container{
+        padding: 15px;
+        width: 50%;
+    }
+    .login-container>input[type=text], .login-container>input[type=password]{
+        padding:12px 20px;
+        margin-top: 8px;
+        border-radius: 25px;
+        width:100%;
+    }
+    .login-popup{
+        width: 50%;
+        height: 75%;
+        padding: 20px 10px;
+        margin-top: 5%;
+        margin-left:25%;
+    }
+    .login-button{
+        padding:12px 20px;
+        margin-top: 8px;
+        border-radius: 25px;
+        width:50%;
+    }
+    .forgot-password{
+        width: 50%;
+        height: 75%;
+        padding: 20px 10px;
+        margin-top: 5%;
+        margin-left:25%;
+    }
+}
+@media only screen and (max-width: 2000px){
+    .exitbutton{
+        font-size: 26px;
+        right: 26%;
+        top: 10vh;
+    }
+    .login-container{
+        padding: 15px;
+        width: 50%;
+    }
+    .login-container>input[type=text], .login-container>input[type=password]{
+        padding:12px 20px;
+        margin-top: 8px;
+        border-radius: 25px;
+        width:100%;
+    }
+    .login-popup{
+        width: 50%;
+        height: 75%;
+        padding: 20px 10px;
+        margin-top: 5%;
+        margin-left:25%;
+    }
+    .login-button{
+        padding:12px 20px;
+        margin-top: 8px;
+        border-radius: 25px;
+        width:50%;
+    }
+    .forgot-password{
+        width: 50%;
+        height: 75%;
+        padding: 20px 10px;
+        margin-top: 5%;
+        margin-left:25%;
+    }
+}
+@media only screen and (max-width: 1024px){
+    .exitbutton{
+        font-size: 26px;
+        right: 26%;
+        top: 50px;
+    }
+    .login-container{
+        padding: 15px;
+        width: 50%;
+    }
+    .login-container>input[type=text], .login-container>input[type=password]{
+        padding:12px 20px;
+        margin-top: 8px;
+        border-radius: 25px;
+        width:100%;
+    }
+    .login-popup{
+        width: 50%;
+        height: 75%;
+        padding: 20px 10px;
+        margin-top: 5%;
+        margin-left:25%;
+    }
+    .login-button{
+        padding:12px 20px;
+        margin-top: 8px;
+        border-radius: 25px;
+        width:50%;
+    }
+    .forgot-password{
+        width: 50%;
+        height: 75%;
+        padding: 20px 10px;
+        margin-top: 5%;
+        margin-left:25%;
+    }
+}
+@media only screen and (max-width: 768px){
+    .exitbutton{
+        font-size: 26px;
+        right: 26%;
+        top: 7vh;
+    }
+    .login-container{
+        padding: 15px;
+        width: 100%;
+        font-size: 12px;
+    }
+    .login-container>input[type=text], .login-container>input[type=password]{
+        padding:12px 20px;
+        margin-top: 8px;
+        border-radius: 25px;
+        width:100%;
+        font-size: 12px;
+    }
+    .login-picture{
+        display:none;
+    }
+    .login-popup{
+        width: 50%;
+        height: 75%;
+        padding: 20px 10px;
+        margin-top: 5%;
+        margin-left:25%;
+    }
+    .login-button{
+        padding:12px 20px;
+        margin-top: 8px;
+        border-radius: 25px;
+        width:50%;
+    }
+    .forgot-password{
+        width: 50%;
+        height: 75%;
+        padding: 20px 10px;
+        margin-top: 5%;
+        margin-left:25%;
+    }
+}
+@media only screen and (max-width: 576px){
+    .exitbutton{
+        font-size: 26px;
+        right: 1.5vh;
+        top: 2vh;
+    }
+    .login-container{
+        padding: 15px;
+        width: 100%;
+        font-size: 12px;
+    }
+    .login-container>input[type=text], .login-container>input[type=password]{
+        padding:12px 20px;
+        margin-top: 8px;
+        border-radius: 25px;
+        width:100%;
+        font-size: 12px;
+    }
+    .login-picture{
+        display:none;
+    }
+    .login-popup{
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        border-radius: 0px;
+    }
+    .login-button{
+        padding:12px 20px;
+        margin-top: 8px;
+        border-radius: 25px;
+        width:50%;
+    }
+    .forgot-password{
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        border-radius: 0px;
+    }
 }
 /* Add Fade In Animation */
 .animate {
