separated photos, css, and js on different folders

--- a/website/css/login.css
+++ b/website/css/login.css
@@ -74,7 +74,7 @@
 }
 .login-picture{
     height: 100%; 
-    background-image: url('food.jpg'); 
+    background-image: url('../photos/food.jpg'); 
     opacity: 0.5; 
     float: right;
 }
