--- a/website/stylesignup.css
+++ b/website/stylesignup.css
@@ -93,7 +93,7 @@ hr.new {
     background-color: #c21010;
 }
 
-#search-icon {
+#user-icon {
     font-size:22px;
     display: inline-block;
     position: absolute;
