--- a/website/css/carousel-design.css
+++ b/website/css/carousel-design.css
@@ -27,14 +27,14 @@
 .picture-1{
     max-width: 100%;
     height: auto;
-    background: linear-gradient(transparent 60%, papayawhip 100%),url("../photos/digital-artist.jpg")no-repeat center;
+    background: linear-gradient(rgba(0,0,0,0.6) 0%, transparent 60%, papayawhip 100%),url("../photos/digital-artist.jpg")no-repeat center;
     background-size: cover;
 }
 .picture-2{
-    background: linear-gradient(transparent 60%, papayawhip 100%),url("../photos/designui.jpg")no-repeat center;
+    background: linear-gradient(rgba(0,0,0,0.6) 0%, transparent 60%, papayawhip 100%),url("../photos/designui.jpg")no-repeat center;
     background-size: cover;
 }
 .picture-3{
-    background: linear-gradient(transparent 60%, papayawhip 100%),url("../photos/ui-pop-art.jpg")no-repeat center;
+    background: linear-gradient(rgba(0,0,0,0.6) 0%, transparent 60%, papayawhip 100%),url("../photos/ui-pop-art.jpg")no-repeat center;
     background-size: cover;
 }
