--- a/website/css/header.css
+++ b/website/css/header.css
@@ -13,7 +13,7 @@
     border-radius: 25px;
 }
 .header-search>button{
-    height: 100%;
+    height: 2em;
     width: 8%;
     position: relative;
     left: -9.5%;
