--- a/website/css/login.css
+++ b/website/css/login.css
@@ -21,7 +21,7 @@
 }
 
 .btn-login {
-    width: 50%;
+    width: 100%;
     height: 46px;
     box-sizing: border-box;
     border: 2px solid;
@@ -46,22 +46,6 @@
 #forgot-pass {
     color: black;
     text-align: center;
-}
-
-#user-logicon {
-    font-size:22px;
-    display: inline-block;
-    position: absolute;
-    margin-top: 13px;
-    margin-left: 16px;
-}
-
-#pass-logicon {
-    font-size:21px;
-    display: inline-block;
-    position: absolute;
-    margin-top: 13px;
-    margin-left: 16px; 
 }
 
 .exitbutton{
@@ -95,19 +79,24 @@
     width: 50%;
     margin: 0;
     overflow: auto;
+    color:white;
 }
 .login-container>input[type=text], .login-container>input[type=password]{
     background-image: none;
+    background: none;
     text-align: center;
     font-size: 1.2vw;
     padding:12px 20px;
     margin-top: 8px;
-    border-radius: 25px;
+    height: 42px;
     width:100%;
-    box-sizing: border-box;
-    color:black;
-    border-color: transparent;
-    background-color: #f8f9fa;
+    color:white;
+    border-radius: 0px;
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    border-bottom:1px solid blue;
+
 }
 /* .login-container>input[type=text]:focus, .login-container>input[type=password]:focus{
     outline: none;
@@ -183,7 +172,7 @@ button:focus{
     .login-container>input[type=text], .login-container>input[type=password]{
         padding:12px 20px;
         margin-top: 8px;
-        border-radius: 25px;
+        /* border-radius: 25px; */
         width:100%;
     }
     .login-popup{
@@ -221,8 +210,9 @@ button:focus{
     .login-container>input[type=text], .login-container>input[type=password]{
         padding:12px 20px;
         margin-top: 8px;
-        border-radius: 25px;
+        /* border-radius: 25px; */
         width:100%;
+        color:white;
     }
     .login-popup{
         width: 50%;
@@ -258,7 +248,7 @@ button:focus{
     .login-container>input[type=text], .login-container>input[type=password]{
         padding:12px 20px;
         margin-top: 8px;
-        border-radius: 25px;
+        /* border-radius: 25px; */
         width:100%;
     }
     .login-popup{
@@ -296,7 +286,7 @@ button:focus{
     .login-container>input[type=text], .login-container>input[type=password]{
         padding:12px 20px;
         margin-top: 8px;
-        border-radius: 25px;
+        /* border-radius: 25px; */
         width:100%;
         font-size: 12px;
     }
@@ -338,7 +328,7 @@ button:focus{
     .login-container>input[type=text], .login-container>input[type=password]{
         padding:12px 20px;
         margin-top: 8px;
-        border-radius: 25px;
+        /* border-radius: 25px; */
         width:100%;
         font-size: 12px;
     }
