--- a/website/css/header.css
+++ b/website/css/header.css
@@ -53,3 +53,8 @@
         left: -9%;
     }
 }
+@media only screen and (max-width: 576px){
+    .header-search>button{
+        display: none;
+    }
+}
