--- a/website/css/login.css
+++ b/website/css/login.css
@@ -151,7 +151,7 @@ button:focus{
     color: white;
 }
 
-/* Add Fade In Animation */
+/* Add Fade In Animation
 .animate {
 -webkit-animation: fadein 1s;
 animation: fadein 1s;
@@ -165,4 +165,4 @@ to {opacity: 1;}
 @keyframes fadein {
 from {opacity: 0;} 
 to {opacity: 1;}
-}
+} */
