smoother display to login

--- a/website/css/login.css
+++ b/website/css/login.css
@@ -150,3 +150,19 @@ button:focus{
 .media-btn:hover {
     color: white;
 }
+
+/* Add Fade In Animation */
+.fadein {
+    -webkit-animation: fadein 1s;
+    animation: fadein 1s;
+}
+
+@-webkit-keyframes fadein {
+from {opacity: 0;} 
+to {opacity: 1;}
+}
+
+@keyframes fadein {
+from {opacity: 0;} 
+to {opacity: 1;}
+}
