--- a/website/css/header.css
+++ b/website/css/header.css
@@ -29,7 +29,7 @@
 .header-login{
     text-align: right;
 }
-.navbar-brand{
+.header-login>.navbar-brand{
     font: inherit;
     font-weight: 200;
     background-color: transparent;
@@ -53,8 +53,18 @@
         left: -9%;
     }
 }
-@media only screen and (max-width: 768px){
+@media only screen and (max-width: 768px) and (min-width: 540px){
     .header-search>button{
         display: none;
+    }
+}
+@media only screen and (max-width: 539px){
+    .header-search>button{
+        width: 3em;
+        border-radius: 0px;
+        background-color: transparent;
+    }
+    .header-search>button:hover{
+        background-color: transparent;
     }
 }
