--- a/website/css/carousel-design.css
+++ b/website/css/carousel-design.css
@@ -54,3 +54,35 @@
         background-color: transparent;
     }
 }
+@media only screen and (max-width: 539px){
+    .carousel-control-prev{
+        height: 55%;
+        left: 0;
+        top: 53px;
+        border-radius: 0%;
+        background-color: transparent;
+    }
+    .carousel-control-next{
+        height: 55%;
+        left: 88vw;
+        top: 53px;
+        border-radius: 0%;
+        background-color: transparent;
+    }
+}
+@media only screen and (max-width: 375px){
+    .carousel-control-prev{
+        height: 55%;
+        left: 0;
+        top: 53px;
+        border-radius: 0%;
+        background-color: transparent;
+    }
+    .carousel-control-next{
+        height: 55%;
+        left: 86vw;
+        top: 53px;
+        border-radius: 0%;
+        background-color: transparent;
+    }
+}
