--- a/website/css/aboutlayout.css
+++ b/website/css/aboutlayout.css
@@ -65,6 +65,12 @@
     opacity: 0.5;
     z-index: -1;
 }
+.about-photo {
+    width: 100%;
+    height: auto;
+    box-shadow: 10px 5px grey;
+    border-radius: 16px;
+}
 @media only screen and (max-width: 768px){
     .body{
         margin-left: 50px;
