--- a/website/css/sidebar.css
+++ b/website/css/sidebar.css
@@ -79,6 +79,30 @@ ul ul a {
     background-color: blueviolet;
 }
 
+.nav-icon{
+    color: white;
+    float: left;
+    margin: 20px;
+}
+.nav-icon:hover{
+    color: pink;
+}
+
+button:focus{
+    background-color: none;
+    color:white;
+}
+button:hover{
+    background-color: transparent;
+}
+button:active{
+    background-color:transparent;
+}
+
+.words{
+    margin-left:5px;
+}
+
 @media only screen and (min-width: 769px) {
     #sidebar{
         min-width: 220px;
